syntax = "proto3";
 
package payment.v1alpha1;

option csharp_namespace = "PPayment.V1Alpha1";
option go_package = "github.com/cuemby/ccp-payment-service/payment/v1alpha1";
option java_multiple_files = true;
option java_outer_classname = "PaymentProto";
option java_package = "io.cuemby.payment.v1alpha1";
option objc_class_prefix = "PPX";
option php_namespace = "PaymentV1Alpha1";

message Payment {
    string id = 1;
    string card_holder_name = 2;
    string card_type = 3;
    string card_number = 4;
    string cvv_number = 5;
    string exp_year =6;
    string exp_month = 7;
    uint32 organization_id = 8;
    uint32 project_id = 9;
    string application_id = 10;
    string suscription_id = 11;
  }

message User {
  string id =1;
  string name = 2;
  string email = 3;
}

message Suscription {
  string id =1;
  string customer= 2;
  string price = 3;
  bool cancel = 4;
}

message PaymentList {
  repeated Payment items = 1;
}
  